@@ -310,6 +310,9 @@ SSLInitServerContext(
   case SSLConfigParams::SSL_SESSION_CACHE_MODE_SERVER:
     SSL_CTX_set_session_cache_mode(ctx, SSL_SESS_CACHE_SERVER);
     SSL_CTX_sess_set_cache_size(ctx, params->ssl_session_cache_size);
+    if (params->ssl_session_cache_timeout) {
+        SSL_CTX_set_timeout(ctx, params->ssl_session_cache_timeout);
+    }
     break;
   }
 
