@@ -2,9 +2,12 @@
 Changes with Apache Traffic Server 4.2.0
 
 
+  *) [TS-2416] Make TLS the session timeout threshold configurable.
+   Author: Wei Sun <sunwei@yahoo-inc.com>
+
   *) [TS-2335] adding ts_lua plugin to experimental directory
 
-  *) [TS-2347] buffer_upload uses unsafe function tempnam(). Replace it 
+  *) [TS-2347] buffer_upload uses unsafe function tempnam(). Replace it
    with mkstemp()
 
   *) [TS-1815] Add thread number and port to accept thread name and
